--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :first %><br />
-    <%= f.text_field :first %>
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name %>
   </div>
   <div class="field">
-    <%= f.label :last %><br />
-    <%= f.text_field :last %>
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name %>
   </div>
   <div class="field">
     <%= f.label :pledge_class_id %><br />
