--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>First:</b>
-  <%= @member.first %>
+  <b>First Name:</b>
+  <%= @member.first_name %>
 </p>
 
 <p>
-  <b>Last:</b>
-  <%= @member.last %>
+  <b>Last Name:</b>
+  <%= @member.last_name %>
 </p>
 
 <p>
