POSTS - update form and display to deprecate member_id
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :member_id %><br />
-    <%= f.number_field :member_id %>
+    <%= f.label :author %><br />
+    <%= f.text_field :author %>
   </div>
   <div class="field">
     <%= f.label :text %><br />
