POSTS - more removal of scaffolding for deprecation of author
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/posts/_display.html.erb
+++ b/app/views/posts/_display.html.erb
@@ -1,6 +1,6 @@
 <div class="post">  
   <h3><%= post.title %></h3>
   <p class="meta">posted by <%= post.author %> on <%= post.display_created_date %></p>
-  <p class="content"><%= post.text %></p>
+  <p class="content"><%= escapeHTML(post.text).gsub(/\n/, '</p><p>').html_safe %></p>
   <p class="comments"><%= link_to pluralize(0, "comment"), "#" %></p>
 </div>
