--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,9 @@
 <h1>Listing posts</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Author</th>
-    <th>Text</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= post.title %></td>
-    <td><%= post.author %></td>
-    <td><%= post.text %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <%= render :partial => "posts/display", :locals => { :post => post } %>
 <% end %>
-</table>
 
-<br />
+<br>
 
 <%= link_to 'New Post', new_post_path %>
