--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Title:</b>
-  <%= @post.title %>
-</p>
-
-<p>
-  <b>Author:</b>
-  <%= @post.author %>
-</p>
-
-<p>
-  <b>Text:</b>
-  <%= @post.text %>
-</p>
-
+<%= render :partial => "posts/display", :locals => { :post => @post } %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
