--- a/app/views/posts/_display.html.erb
+++ b/app/views/posts/_display.html.erb
@@ -1,6 +1,6 @@
 <div class="post">  
   <h3><%= link_to post.title, post_path(post) %></h3>
   <p class="meta">posted by <%= post.author %> on <%= post.display_created_date %></p>
-  <p class="content"><%= post.display_text %></p>
+  <p class="content"><%= simple_format post.text %></p>
   <p class="comments"><%= link_to pluralize(0, "comment"), "#" %></p>
 </div>
