--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,8 @@
   </div> <!-- page-wrapper -->
   <footer>
     <div class="container">
-      <span>Sticky footer</span>
+      <p>Theta Chi, Mu Chapter. 2499 Piedmont Avenue, Berkeley, CA 94704</p>
+      <p>Designed and built by James Diefenderfer</p>
     </div>
   </footer>
 
