FOOTER - fix sticky footer, downgrade sass-rails to fix image-path on heroku
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <li class="active"><%= link_to "Home", root_path %></li>
           <li><%= link_to "About Us", "#" %></li>
           <li><%= link_to "Rush", "#" %></li>
-          <li><%= link_to "Photos", "#" %></li>
+          <li><%= link_to "Photos", photo_albums_path %></li>
           <li><%= link_to "Active Members", "#" %></li>
           <li><%= link_to "Alumni", "#" %></li>
           <li><%= link_to "News", "#" %></li>
@@ -52,8 +52,8 @@
   </div> <!-- page-wrapper -->
   <footer>
     <div class="container">
-      <p>Theta Chi, Mu Chapter. 2499 Piedmont Avenue, Berkeley, CA 94704</p>
-      <p>Designed and built by James Diefenderfer</p>
+      <p>All content copyright &copy; 2013 Theta Chi, Mu Chapter. All rights reserved.</p>
+      <p>Designed and built by <%= link_to "James Diefenderfer", "http://www.jimmydief.com" %>, '15</p>
     </div>
   </footer>
 
