--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -71,6 +71,7 @@ a {
 
 header {
   background-image: linear-gradient(to top,#920000,#d60000);
+  background-color: #c70000;
   border-bottom: 1px solid #c80012;
   padding: 10px 0 10px 0;
   
@@ -140,7 +141,7 @@ form#search-bar {
 nav {
   background-color: #b60002;
   border-bottom: 6px solid #dfdfdf;
-  height: $nav-height;
+  height: $nav-height + 6px;
   
   ul {
     display: block;
@@ -245,6 +246,7 @@ footer {
   position: relative; 
   height: $footer-height;
   margin-top: -$footer-height;
+  padding: 30px 0 20px 0;
   clear: both;
   
   .container {
