--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,4 @@
-// Variables
+// Layout variables
 $scarlet: #B22222;
 $nav-height: 35px;
 $footer-height: 110px;
@@ -35,6 +35,7 @@ h1 {
 h2 {
   font-size: 24px;
   line-height: 24px;
+  margin-bottom: 8px;
 }
 
 h3 {
@@ -81,7 +82,7 @@ header {
 }
 
 #logo {
-  background: image-url("layout/theta-chi-logo.png") no-repeat;
+  background: image-url("layout/theta-chi-logo-v2.png") no-repeat;
   width: 530px;
   height: 90px;
   
@@ -138,13 +139,37 @@ form#search-bar {
   }
 }
 
+#social {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  width: 245px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  
+  li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    color: white;
+    
+    &:not(:last-of-type):after {
+      content: " - ";
+    }
+    
+    a {
+      color: white;
+    }
+  }
+}
+
 nav {
   background-color: #b60002;
   border-bottom: 6px solid #dfdfdf;
   height: $nav-height + 6px;
   
   ul {
-    display: block;
     border-left: 1px solid #900;
     height: $nav-height;
     margin: 0;
@@ -152,7 +177,7 @@ nav {
     overflow: hidden;
     
     li {
-      display: block;
+      display: inline-block;
       float:left;
       border-right: 1px solid #ca0002;
       height: $nav-height;
@@ -181,17 +206,17 @@ nav {
           border-left: 1px solid #ca0002;
         }
       }
-    }
-    
-    li.active {
-      background-color: #dfdfdf;
       
-      a {
-        color: black;
-        font-weight: 800;
+      &.active {
+        background-color: #dfdfdf;
         
-        &:hover, &:active {
-          background-color: inherit;
+        a {
+          color: black;
+          font-weight: 800;
+          
+          &:hover, &:active {
+            background-color: inherit;
+          }
         }
       }
     }
@@ -226,18 +251,16 @@ img.lead {
     }
   }
   
-  p.meta {
-    color: #4f4d4d;
-    margin-top: 0;
-  }
+  p {
+    &.meta {
+      color: #4f4d4d;
+      margin-top: 0;
+    }
   
-  p.comments {
-    margin-bottom: 15px;
+    &.comments {
+      margin-bottom: 15px;
+    }
   }
-}
-
-.post:last-of-type {
-  border-top: 1px solid black;
 }
 
 footer {
@@ -254,5 +277,11 @@ footer {
     position: relative;
     text-align: center;
     min-height: 57px;
+  }
+}
+
+.photo {
+  a h3 {
+    color: black;
   }
 }
