--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing posts</h1>
+<h1>Chapter News</h1>
 
 <% @posts.each do |post| %>
   <%= render :partial => "posts/display", :locals => { :post => post } %>
