--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -41,6 +41,7 @@ h2 {
 h3 {
   font-size: 20px;
   line-height: 20px;
+  margin-bottom: 10px;
 }
 
 p {
@@ -56,6 +57,11 @@ a {
     text-decoration: underline;
     outline: 0;
   }
+}
+
+address {
+  font-style: normal;
+  margin-left: 20px;
 }
 
 .down-arrow {
@@ -78,88 +84,88 @@ header {
   
   .container {
     position: relative;
-  }
-}
-
-#logo {
-  background: image-url("layout/theta-chi-logo-v2.png") no-repeat;
-  width: 530px;
-  height: 90px;
-  
-  a {
-    display: block;
-    height: 100%;
-  }
-}
-
-form#search-bar {
-  position: absolute;
-  top: 20px;
-  right: 0;
-  
-  input {
-    border: 1px solid #cccccc;
-    border-radius: 4px 0 0 4px;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    transition: border linear 0.2s, box-shadow linear 0.2s;
-    width: 200px;
-    margin: 0 -5px 0 0;
-    padding: 3px 5px;
-    font-size: 14px;
-  }
-  
-  button {
-    background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-    border: 1px solid #cccccc;
-    border-bottom-color: #b3b3b3;
-    border-radius: 0 4px 4px 0;
-    width: 45px;
-    margin: 0;
-    padding: 3px 5px;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-    color: #333333;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-    text-transform: uppercase;
-    cursor: pointer;
     
-    &:hover {
-      color: #33334D;
-      background-image: linear-gradient(to top, #ffffff, #e6e6e6);
-      transition: background-position 0.1s linear;
+    #logo {
+      background: image-url("layout/theta-chi-logo-v2.png") no-repeat;
+      width: 530px;
+      height: 90px;
+      
+      a {
+        display: block;
+        height: 100%;
+      }
     }
     
-    &:active {
-      background-image: none;
-      outline: 0;
-      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-      background-color: #ededed;
+    form#search-bar {
+      position: absolute;
+      top: 20px;
+      right: 0;
+      
+      input {
+        border: 1px solid #cccccc;
+        border-radius: 4px 0 0 4px;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+        transition: border linear 0.2s, box-shadow linear 0.2s;
+        width: 200px;
+        margin: 0 -5px 0 0;
+        padding: 3px 5px;
+        font-size: 14px;
+      }
+      
+      button {
+        background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+        border: 1px solid #cccccc;
+        border-bottom-color: #b3b3b3;
+        border-radius: 0 4px 4px 0;
+        width: 45px;
+        margin: 0;
+        padding: 3px 5px;
+        font-size: 14px;
+        font-weight: bold;
+        text-align: center;
+        color: #333333;
+        text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+        text-transform: uppercase;
+        cursor: pointer;
+        
+        &:hover {
+          color: #33334D;
+          background-image: linear-gradient(to top, #ffffff, #e6e6e6);
+          transition: background-position 0.1s linear;
+        }
+        
+        &:active {
+          background-image: none;
+          outline: 0;
+          box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+          background-color: #ededed;
+        }
+      }
     }
-  }
-}
-
-#social {
-  position: absolute;
-  top: 50px;
-  right: 0;
-  width: 245px;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  
-  li {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    color: white;
     
-    &:not(:last-of-type):after {
-      content: " - ";
-    }
-    
-    a {
-      color: white;
+    #social {
+      position: absolute;
+      top: 50px;
+      right: 0;
+      width: 245px;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      
+      li {
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        color: white;
+        
+        &:not(:last-of-type):after {
+          content: " - ";
+        }
+        
+        a {
+          color: white;
+        }
+      }
     }
   }
 }
@@ -230,7 +236,7 @@ nav {
 
 #page-content {
   overflow: auto;
-  padding-bottom: $footer-height;
+  padding-bottom: $footer-height + 20px;
 }
 
 img.lead {
@@ -241,13 +247,17 @@ img.lead {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.post {
+article {
   border-top: 1px solid black;
 
   h3 {
     margin: {
       top: 15px;
       bottom: 0;
+    }
+    
+    a {
+      color: black;
     }
   }
   
@@ -273,10 +283,18 @@ footer {
   clear: both;
   
   .container {
-    background: url("http://jimmydief.com/images/layout/JD-Logo-small-letterpressed.png") no-repeat right top;
     position: relative;
     text-align: center;
     min-height: 57px;
+    
+    #designer-promo {
+      background: url("http://jimmydief.com/images/layout/JD-Logo-small-letterpressed.png") no-repeat;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 77px;
+      height: 57px;
+    }
   }
 }
 
@@ -284,4 +302,26 @@ footer {
   a h3 {
     color: black;
   }
+}
+
+dl {
+
+  dt {
+    display: inline;
+    float: left;
+    font-weight: bold;
+    margin: {
+      left: 20px;
+      right: 6px;
+    }
+    
+    &:after {
+      content: ": ";
+    }
+  }
+  
+  dd {
+    margin: 0;
+  }
+  
 }
