PHOTOS - display square photo previews
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,7 +7,7 @@
     <%= link_to photo_album_path(album.title.downcase.gsub(" ", "-")) do %>
   
     <h3><%= album.title %></h3>
-    <%= image_tag FlickRaw.url_n(info) %>
+    <%= image_tag FlickRaw.url_q(info) %>
     
     <% end %>
   </div>
