--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,6 +4,6 @@
 <% @album.photo.each do |photo| %>
 
   <% info = flickr.photos.getInfo(:photo_id => photo.id) %>
-  <%= image_tag FlickRaw.url_n(info) %>
+  <%= image_tag FlickRaw.url_q(info) %>
 
 <% end %>
