--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Chapter News</h1>
 
+<% if @query %>
+Showing <%= pluralize @posts.count, "result" %> for "<%= @query %>"
+<% end %>
+
 <% @posts.each do |post| %>
   <%= render :partial => "posts/display", :locals => { :post => post } %>
 <% end %>
