--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -299,6 +299,18 @@ footer {
 }
 
 .photo {
+  width: 310px;
+  float: left;
+  
+  &:not(:nth-of-type(3n)) {
+    margin-right: 10px;
+  }
+  
+  img {
+    width: 310px;
+    height: 206px;
+  }
+
   a h3 {
     color: black;
   }
