MEMBER ZONE - add http basic auth
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
         <li name="posts"><%= link_to "News", posts_path %></li>
         <li name="contact"><%= link_to "Contact Us", contact_path %></li>
         <li name="apparel"><%= link_to "Apparel Store", "http://thetachi.bigcartel.com/", :target => "_blank" %></li>
-        <li name="member_zone"><%= link_to "Member Zone", "#" %></li>
+        <li name="member_zone"><%= link_to "Member Zone", member_zone_path %></li>
       </ul>
     </nav>
     
