--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,8 @@
         <li name="about"><%= link_to "About Us", about_us_path %></li>
         <li name="rush"><%= link_to "Rush", rush_path %></li>
         <li name="photos"><%= link_to "Photos", photo_album_index_path %></li>
-        <li name="actives"><%= link_to "Active Members", "#" %></li>
-        <li name="alumni"><%= link_to "Alumni", "#" %></li>
+        <li name="actives"><%= link_to "Active Members", actives_path %></li>
+        <li name="alumni"><%= link_to "Alumni", alumni_path %></li>
         <li name="posts"><%= link_to "News", posts_path %></li>
         <li name="contact"><%= link_to "Contact Us", contact_path %></li>
         <li name="apparel"><%= link_to "Apparel Store", "http://thetachi.bigcartel.com/", :target => "_blank" %></li>
