META - add keywords and description
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
   <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Alegreya:400,700" %>
   <%= csrf_meta_tags %>
   
+  <meta name="keywords" content="Cal, Berkeley, UCB, University of California, Golden Bears, Theta Chi, Theta Chi Mu, Cal Theta Chi, ΘΧ, fraternity">
+  <meta name="description" content="The website of Theta Chi, Mu Chapter at UC Berkeley">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  
   <%= javascript_tag do %>
     $(document).ready(function() {
       $("nav li").each(function() {
