BUTTONS - add button styling to some links
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -14,7 +14,7 @@
 
 <section name="chapter-house">
   <h3>The Chapter House</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
+  <p>Our beautiful house resides on the iconic corner of Piedmont and Dwight, where it has stood for over a hundred years. The house was originally built in 19-- as the mansion of the mayor of Oakland. In 19--, Theta Chi moved from its former home on Leconte Ave. to the current location. A large addition was added in order to greatly increase the living capacity of the house. Recent improvements have included remodeled bathrooms, the addition of a new room behind the bar, and restoration of room #1, Presidente.</p>
 </section>
 
 <section name="brotherhood">
