--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,4 +10,4 @@ Showing <%= pluralize @posts.count, "result" %> for "<%= @query %>"
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path, :class => "button pull-right" %>
