--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -64,6 +64,35 @@ address {
   margin-left: 20px;
 }
 
+button, a.button {
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  border: 1px solid #cccccc;
+  border-bottom-color: #b3b3b3;
+  border-radius: 4px;
+  margin: 0;
+  padding: 3px 5px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  color: #333333;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  text-decoration: none;
+  cursor: pointer;
+  
+  &:hover {
+    color: #33334D;
+    background-image: linear-gradient(to top, #ffffff, #e6e6e6);
+    transition: background-position 0.1s linear;
+  }
+  
+  &:active {
+    background-image: none;
+    outline: 0;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+    background-color: #ededed;
+  }
+}
+
 .down-arrow {
 	border-color: black transparent;
 	border-style: solid;
@@ -113,33 +142,9 @@ header {
       }
       
       button {
-        background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-        border: 1px solid #cccccc;
-        border-bottom-color: #b3b3b3;
         border-radius: 0 4px 4px 0;
         width: 45px;
-        margin: 0;
-        padding: 3px 5px;
-        font-size: 14px;
-        font-weight: bold;
-        text-align: center;
-        color: #333333;
-        text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
         text-transform: uppercase;
-        cursor: pointer;
-        
-        &:hover {
-          color: #33334D;
-          background-image: linear-gradient(to top, #ffffff, #e6e6e6);
-          transition: background-position 0.1s linear;
-        }
-        
-        &:active {
-          background-image: none;
-          outline: 0;
-          box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-          background-color: #ededed;
-        }
       }
     }
     
@@ -327,7 +332,6 @@ footer {
 }
 
 dl {
-
   dt {
     display: inline;
     float: left;
@@ -345,5 +349,12 @@ dl {
   dd {
     margin: 0;
   }
-  
+}
+
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
 }
