NEWSLETTER - update newsletter subscribe links
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/member_zone/index.html.erb
+++ b/app/views/member_zone/index.html.erb
@@ -1,8 +1,19 @@
 <h1>Member Zone</h1>
 <p>Resources for active brothers of the chapter.</p>
-<ul>
-  <li>Test Bank</li>
-  <li>Calendar</li>
-</ul>
 
-<%= image_tag asset_path("kate_upton.gif") %>
+<section name="test-bank">
+  <h3>Test Bank</h3>
+  <p>The test bank can be accessed by logging into <%= link_to "Google Drive", "https://drive.google.com/" %> with the following credentials:</p>
+  <dl>
+    <dt>Username</dt>
+    <dd>oxtestbank</dd>
+    
+    <dt>Password</dt>
+    <dd>arthurchase</dd>
+  </dl>
+</section>
+
+<section name="calendar">
+  <h3>Event Calendar</h3>
+  <p>Chapter events will be posted in the calendar below which can be synced with your computer or phone.</p>
+</section>
