COMMENTS - add comment functionality and styling
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -1,6 +1,7 @@
-<h1>About Us</h1>  
-
-<p>Feel free to contact the house, its officers, or the alumni board for any reason. We can currently be contacted in the following ways:</p>
+<div class="page-header">
+  <h1>About Us</h1>  
+  <p>Feel free to contact the house, its officers, or the alumni board for any reason. We can currently be contacted in the following ways:</p>
+</div>
 
 <section name="cal-history">
   <h3>History at Cal</h3>
