--- a/app/views/landing/contact.html.erb
+++ b/app/views/landing/contact.html.erb
@@ -1,6 +1,7 @@
-<h1>Contact Us</h1>
-
-<p>Feel free to contact the house, its officers, or the alumni board for any reason. We can currently be contacted in the following ways:</p>
+<div class="page-header">
+  <h1>Contact Us</h1>
+  <p>Feel free to contact the house, its officers, or the alumni board for any reason. We can currently be contacted in the following ways:</p>
+</div>
 
 <section name="email">
   <h3>Email</h3>
