--- a/app/views/member_zone/index.html.erb
+++ b/app/views/member_zone/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Member Zone</h1>
-<p>Resources for active brothers of the chapter.</p>
+<div class="page-header">
+  <h1>Member Zone</h1>
+  <p>Resources for active brothers of the chapter.</p>
+</div>
 
 <section name="test-bank">
   <h3>Test Bank</h3>
