--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -44,6 +44,11 @@ h3 {
   margin-bottom: 10px;
 }
 
+h4 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
 p {
   margin: 0 0 10px 0;
 }
@@ -59,16 +64,48 @@ a {
   }
 }
 
+hr {
+  border: none;
+  border-top: 1px solid black;
+  margin: {
+    top: 8px;
+    bottom: 8px;
+  }
+}
+
 address {
   font-style: normal;
   margin-left: 20px;
 }
 
-button, a.button {
+form:not(#search-bar) {
+  input[type="text"], textarea {
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  
+  input[type="text"] {
+    width: 300px;
+  }
+  
+  textarea {
+    width: 500px;
+    height: 250px;
+  }
+  
+  input[type="submit"] {
+    line-height: 20px;
+  }
+}
+
+button, input[type="submit"], a.button {
   background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
   border: 1px solid #cccccc;
   border-bottom-color: #b3b3b3;
   border-radius: 4px;
+  display: inline-block;
   margin: 0;
   padding: 3px 5px;
   font-size: 14px;
@@ -244,6 +281,20 @@ nav {
   padding-bottom: $footer-height + 20px;
 }
 
+#notice {
+  background-color: lightgreen;
+  border: 1px solid green;
+  padding: 5px;
+  margin-top: 15px;
+}
+
+.error {
+  background-color: lightcoral;
+  border: 1px solid crimson;
+  padding: 5px;
+  margin-top: 15px;
+}
+
 img.lead {
   float: right;
   border: 1px solid #ccc;
@@ -252,8 +303,28 @@ img.lead {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
+.page-header {
+  border-bottom: 1px solid black;
+  
+  h1 {
+    margin-bottom: 8px;
+  }
+  
+  p.meta {
+    color: #4f4d4d;
+  }
+}
+
+img.lead + .page-header {
+  border: none;
+}
+
 article {
   border-top: 1px solid black;
+  
+  &:first-of-type {
+    border: none;
+  }
 
   h3 {
     margin: {
@@ -262,18 +333,59 @@ article {
     }
     
     a {
-      color: black;
+      color: black !important;
     }
   }
   
   p {
     &.meta {
-      color: #4f4d4d;
       margin-top: 0;
     }
   
-    &.comments {
+    &.comments-count {
       margin-bottom: 15px;
+    }
+  }
+  
+  .button {
+    margin-bottom: 15px;
+  }
+}
+
+.post-comments {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  
+  h3 a, h4 a {
+    color: black !important;
+    text-decoration: none;
+  }
+  
+  textarea {
+    height: 66px !important;
+  }
+  
+  .comment {
+    border-radius: 4px;
+    padding: 10px;
+    
+    &:nth-of-type(odd) {
+      background-color: lightgrey;
+    }
+    
+    &:not(:last-of-type) {
+      margin-bottom: 5px;
+    }
+    
+    p.meta {
+      margin-bottom: 0;
+      color: #4f4d4d;
+      font-size: 12px;
+      font-style: italic;
+      
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
     }
   }
 }
@@ -328,6 +440,20 @@ footer {
   
   &:not(:nth-of-type(5n)) {
     margin-right: 10px;
+  }
+}
+
+.album-photos {
+  margin: {
+    top: 15px;
+    bottom: 20px;
+  }
+  
+  // clearfix
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
   }
 }
 
