--- a/app/views/landing/rush.html.erb
+++ b/app/views/landing/rush.html.erb
@@ -1,5 +1,8 @@
 <img src="<%= asset_path "photos/coat-of-arms.jpg" %>" class="lead">
 
-<h1>Rush</h1>  
-
-<p>Recruitment is an essential part of the Greek system and one that look forward to twice a year as an opportunity to meet future brothers.</p>
+<div class="page-header">
+  <h1>Rush</h1>  
+  <p>Recruitment is an essential part of the Greek system and one that look forward to twice a year as an opportunity to meet future brothers.</p>
+</div>
+  
+  <hr>
