--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,14 +1,18 @@
-<h1>Photo Albums</h1>
-<p>Recent photos from our events and everyday life at the house.</p>
+<div class="page-header">
+  <h1>Photo Albums</h1>
+  <p>Recent photos from our events and everyday life at the house.</p>
+</div>
 
-<% @albums.each do |album| %>
-  <% info = flickr.photos.getInfo(:photo_id => album.primary) %>
-  <div class="album">
-    <%= link_to photo_album_path(album.title.downcase.gsub(/[^\w ]/, "").gsub(" ", "-")) do %>
-  
-    <h3><%= album.title %></h3>
-    <%= image_tag FlickRaw.url_n(info) %>
+<section name="albums">
+  <% @albums.each do |album| %>
+    <% info = flickr.photos.getInfo(:photo_id => album.primary) %>
+    <div class="album">
+      <%= link_to photo_album_path(album.title.downcase.gsub(/[^\w ]/, "").gsub(" ", "-")) do %>
     
-    <% end %>
-  </div>
-<% end %>
+      <h3><%= album.title %></h3>
+      <%= image_tag FlickRaw.url_n(info) %>
+      
+      <% end %>
+    </div>
+  <% end %>
+</section>
