--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,13 +1,19 @@
-<h1><%= @title %></h1>
-<p><%= @description %></p>
+<div class="page-header">
+  <h1><%= @title %></h1>
+  <% if @description.present? %>
+    <p><%= @description %></p>
+  <% end %>
+</div>
 
-<% @album.photo.each do |photo| %>
-  
-  <div class="photo">
-    <% info = flickr.photos.getInfo(:photo_id => photo.id) %>
-    <%= link_to FlickRaw.url_c(info), :rel => "lightbox-album", :title => info.title do %>
-    <%= image_tag FlickRaw.url_q(info) %>
-    <% end %>
-  </div>  
+<div class="album-photos">
+  <% @album.photo.each do |photo| %>
+    <div class="photo">
+      <% info = flickr.photos.getInfo(:photo_id => photo.id) %>
+      <%= link_to FlickRaw.url_c(info), :rel => "lightbox-album", :title => info.title do %>
+      <%= image_tag FlickRaw.url_q(info) %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
 
-<% end %>
+<%= link_to "Back", photo_album_index_path, :class => "button" %>
