--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Chapter News</h1>
+<% if notice.present? %>
+  <p id="notice"><%= notice %></p>
+<% end %>
+
+<div class="page-header">
+  <h1>Chapter News</h1>
+  <p>Recent news and updates from the active brothers at Mu Chapter.</p>
+</div>
 
 <% if @query %>
 Showing <%= pluralize @posts.count, "result" %> for "<%= @query %>"
@@ -8,6 +15,8 @@ Showing <%= pluralize @posts.count, "result" %> for "<%= @query %>"
   <%= render :partial => "posts/display", :locals => { :post => post } %>
 <% end %>
 
-<br>
-
-<%= link_to 'New Post', new_post_path, :class => "button pull-right" %>
+<% if logged_in? %>
+  <%= link_to "New Post", new_post_path, :class => "button pull-right" %>
+<% else %>
+  <%= link_to "Admin Login", member_zone_path, :class => "button pull-right" %>
+<% end %>
