POSTS - urls by slug, not id
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -25,6 +25,6 @@
   </div>
   <div class="actions">
     <%= link_to "Back", posts_path, :class => "button" %>
-    <%= f.submit "Submit Post" %>
+    <%= f.submit %>
   </div>
 <% end %>
