--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,7 +7,7 @@
   <% @albums.each do |album| %>
     <% info = flickr.photos.getInfo(:photo_id => album.primary) %>
     <div class="album">
-      <%= link_to photo_album_path(album.title.downcase.gsub(/[^\w ]/, "").gsub(" ", "-")) do %>
+      <%= link_to photo_album_path(album.title.parameterize) do %>
     
       <h3><%= album.title %></h3>
       <%= image_tag FlickRaw.url_n(info) %>
