--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -3,6 +3,6 @@
   <p class="meta">posted by <%= comment.name %> on <%= comment.display_created_date %></p>
   
   <% if logged_in? %>
-    <%= link_to "Delete", post_comment_path(comment.post.id, comment.id), :method => :delete, :confirm => "Are you sure that you want to delete this comment?", :class => "button" %>
+    <%= link_to "Delete", post_comment_path(comment.post, comment), :method => :delete, :confirm => "Are you sure that you want to delete this comment?", :class => "button" %>
   <% end %>
 </div>
