BUTTON - move new post/login buttons to page header
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -313,6 +313,11 @@ img.lead {
   p.meta {
     color: #4f4d4d;
   }
+  
+  .button {
+    float: right;
+    margin-top: 2px;
+  }
 }
 
 img.lead + .page-header {
