ERRORS - set and show error messages
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,4 +1,4 @@
 <h1>Error - Record Not Found</h1>
-<p>Hello</p>
+<p>If the problem persists, please let us know via one of the communication methods shown on the <%= link_to "contact page", contact_path %>.</p>
 
-<%= params.inspect %>
+<%= @error.inspect %>
