ERRORS - stop showing error message in error pages
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/errors/internal.html.erb
+++ b/app/views/errors/internal.html.erb
@@ -1,2 +1,2 @@
-<h1>Errors#internal</h1>
-<p>Find me in app/views/errors/internal.html.erb</p>
+<h1>Internal Server Error</h1>
+<p>If the problem persists, please let us know via one of the communication methods shown on the <%= link_to "contact page", contact_path %>.</p>
